--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
   <body>
     <h1>ToDo List</h1>
 
-    <input type="text"> 
+    <input type="text" id="item_name"> 
     <button id="btn_add">Add Item</button>
     <button id="btn_remove">Remove Item</button>
 
-    <ul>
-      <li>Go to the market</li>
-      <li>Get shopping cart</li>
-      <li>Check the shopping list</li>
-      <li>Buy milk</li>
+    <ul id="task_list">
+      
     </ul>
 
 
