--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
     <input type="text" id="item_name"> 
     <button id="btn_add">Add Item</button>
-    <button id="btn_remove">Remove Item</button>
 
     <ul id="task_list">
-      
+      <li>Go to the market - <span style="color: blue;">(edit)</span> - <span class="btn-remove" style="color: red;">(remove)</span></li>
+      <li>Go to the market - <span style="color: blue;">(edit)</span> - <span class="btn-remove" style="color: red;">(remove)</span></li>
     </ul>
-
 
 
     <script src="script.js"></script>
